// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevLogs Component using Snapshot renders closed dialog correctly: devlogs-closed 1`] = `<DocumentFragment />`;

exports[`DevLogs Component using Snapshot renders empty logs state correctly: devlogs-empty 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        <div>
          Developer Logs
        </div>
        <div>
          View sync operation logs with timestamps and status information.
        </div>
      </div>
      <div
        class="flex justify-between items-center mb-4 gap-4"
      >
        <div>
          <div>
            <div>
              Filter by level
            </div>
          </div>
          <div>
            <div>
              All Levels
            </div>
            <div>
              INFO
            </div>
            <div>
              WARN
            </div>
            <div>
              ERROR
            </div>
          </div>
        </div>
        <div
          class="flex gap-2"
        >
          <button
            variant="outline"
          >
            Refresh
          </button>
          <button
            disabled=""
            variant="outline"
          >
            Copy All
          </button>
        </div>
      </div>
      <div
        class="flex-1 overflow-y-auto border rounded-md p-4 bg-gray-50 dark:bg-gray-900"
      >
        <div
          class="text-center py-8 text-gray-500"
        >
          No logs available
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DevLogs Component using Snapshot renders loading state correctly: devlogs-loading 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        <div>
          Developer Logs
        </div>
        <div>
          View sync operation logs with timestamps and status information.
        </div>
      </div>
      <div
        class="flex justify-between items-center mb-4 gap-4"
      >
        <div>
          <div>
            <div>
              Filter by level
            </div>
          </div>
          <div>
            <div>
              All Levels
            </div>
            <div>
              INFO
            </div>
            <div>
              WARN
            </div>
            <div>
              ERROR
            </div>
          </div>
        </div>
        <div
          class="flex gap-2"
        >
          <button
            disabled=""
            variant="outline"
          >
            Refreshing...
          </button>
          <button
            disabled=""
            variant="outline"
          >
            Copy All
          </button>
        </div>
      </div>
      <div
        class="flex-1 overflow-y-auto border rounded-md p-4 bg-gray-50 dark:bg-gray-900"
      >
        <div
          class="text-center py-8 text-gray-500"
        >
          Loading logs...
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DevLogs Component using Snapshot renders open dialog with logs correctly: devlogs-with-logs 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        <div>
          Developer Logs
        </div>
        <div>
          View sync operation logs with timestamps and status information.
        </div>
      </div>
      <div
        class="flex justify-between items-center mb-4 gap-4"
      >
        <div>
          <div>
            <div>
              Filter by level
            </div>
          </div>
          <div>
            <div>
              All Levels
            </div>
            <div>
              INFO
            </div>
            <div>
              WARN
            </div>
            <div>
              ERROR
            </div>
          </div>
        </div>
        <div
          class="flex gap-2"
        >
          <button
            variant="outline"
          >
            Refresh
          </button>
          <button
            disabled=""
            variant="outline"
          >
            Copy All
          </button>
        </div>
      </div>
      <div
        class="flex-1 overflow-y-auto border rounded-md p-4 bg-gray-50 dark:bg-gray-900"
      >
        <div
          class="text-center py-8 text-gray-500"
        >
          No logs available
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
